--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Surely I Am Joking
 ---
 
 <blockquote>
-<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">Some Random Thoughts</a>
+<a href="http://www.mindomo.com/view.htm?m=4006528863454a93b643329beae2729a"> mind map index of articles</a>
 </blockquote>
 
 
