--- a/_posts/2012-02-08-reason-and-proof.html
+++ b/_posts/2012-02-08-reason-and-proof.html
@@ -1,3 +1,16 @@
+<html>
+<head>
+
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link href="http://www.yinwang.org/main.css" rel="stylesheet" type="text/css">
+<link rel="alternate" type="application/atom+xml" href="atom.xml" title="Atom feed">
+<link rel="shortcut icon" href="http://www.yinwang.org/images/Yc.jpg">
+
+<title>什么是“为什么”</title>
+</head>
+
+<body>
+
 <img src="http://www.yinwang.org/reason.jpg">
 
 <p>I have always been dissatisified with mathematical proofs, no matter how rigorous they are. I can understand and verify the proofs, but they often teach me very little. My math professors have always felt strange about me, because I ask more questions than they think is necessary.
@@ -15,3 +28,7 @@
 
 
 <p>The <em>reason</em> that something is true is often deeper and simpler, but harder to find than, a <em>proof</em> that it is true. There can be many proofs of the same truth, but there is often only one reason that <em>makes</em> it true. To put it into analogy: the evidence of a crime doesn't cause the crime to happen. The crime happens because of a much deeper reason, so does the theorem.
+
+</body>
+
+</html>
